force-app/main/default/objects/KimbleOne__PlanTask__c/KimbleOne__PlanTask__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Plan Task</label>
    <nameField>
        <label>PlanTask Sequence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>