force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__CanUpdateDelete__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanUpdateDelete__c</fullName>
    <formula>&apos;Y&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Obsolete - CanUpdateDelete</label>
    <type>Text</type>
</CustomField>