force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__Duration__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>