force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__Effort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Effort__c</fullName>
    <label>Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>