force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__EffortCompletePercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EffortCompletePercentage__c</fullName>
    <formula>IF( (KimbleOne__TotalEffort__c) &gt; 0, 
     KimbleOne__ExpendedEffort__c / (KimbleOne__TotalEffort__c),
     IF(KimbleOne__PlanTaskAssignmentCount__c &gt; 0, 1, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pct Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>