force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__IntroducedInBaselinePlan__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntroducedInBaselinePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Introduced In Baseline Plan</label>
    <referenceTo>KimbleOne__BaselinePlan__c</referenceTo>
    <relationshipLabel>Plan Tasks</relationshipLabel>
    <relationshipName>Plan_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>