force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__IsCriticalPath__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsCriticalPath__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Critical Path?</label>
    <type>Checkbox</type>
</CustomField>