force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__IsScheduled__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scheduled</label>
    <type>Checkbox</type>
</CustomField>