force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__PlanItemConstraintType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanItemConstraintType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constraint Type</label>
    <referenceTo>KimbleOne__PlanItemConstraintType__c</referenceTo>
    <relationshipLabel>Plan Tasks</relationshipLabel>
    <relationshipName>PlanTasks</relationshipName>
    <type>Lookup</type>
</CustomField>