force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__PlanTaskAssignmentCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanTaskAssignmentCount__c</fullName>
    <label>Plan Task Assignment Count</label>
    <summaryForeignKey>KimbleOne__PlanTaskAssignment__c.KimbleOne__PlanTask__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>