force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__RemainingRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingRevenue__c</fullName>
    <label>Remaining Revenue</label>
    <summarizedField>KimbleOne__PlanTaskAssignment__c.KimbleOne__RemainingRevenue__c</summarizedField>
    <summaryFilterItems>
        <field>KimbleOne__PlanTaskAssignment__c.KimbleOne__IncludeInRollUp__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>KimbleOne__PlanTaskAssignment__c.KimbleOne__PlanTask__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>