force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__TrackingPlan__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrackingPlan__c</fullName>
    <label>Tracking Plan</label>
    <referenceTo>KimbleOne__TrackingPlan__c</referenceTo>
    <relationshipLabel>Plan Tasks</relationshipLabel>
    <relationshipName>PlanTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>