force-app/main/default/objects/KimbleOne__PlanTask__c/fields/KimbleOne__VisibilityLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__VisibilityLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visibility</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Plan Tasks</relationshipLabel>
    <relationshipName>PlanTasks</relationshipName>
    <type>Lookup</type>
</CustomField>