force-app/main/default/objects/KimbleOne__PlanTask__c/validationRules/KimbleOne__EndDateAfterStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__EndDateAfterStartDate</fullName>
    <active>true</active>
    <description>End Date must be on or after Start Date</description>
    <errorConditionFormula>KimbleOne__StartDate__c &gt; KimbleOne__EndDate__c</errorConditionFormula>
    <errorMessage>End Date must be on or after Start Date</errorMessage>
</ValidationRule>